--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ web-build/
 # macOS
 .DS_Store
 
+package-lock.json
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
